server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopapi
  namespace: shopmcp
spec:
  selector:
    app: shopapi
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
